finish connect with api

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,5 +29,6 @@
             android:name="com.example.schoolshop.ChatActivity"
             android:label="@string/label_activity_chat" />
     </application>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
