--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.squareup.okhttp3:okhttp:4.0.0-RC1'
+    implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'com.scaledrone:scaledrone-java:0.6.0'
 }
