--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.0.0-RC1'
     implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'com.scaledrone:scaledrone-java:0.6.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
